some spacing fixes

--- a/frontend/src/components/StageThree/StageThree.module.css
+++ b/frontend/src/components/StageThree/StageThree.module.css
@@ -10,7 +10,6 @@
 
 .flex_items {
     width: 30%;
-    min-height: 30vh;
     background: rgb(240, 242, 245);
     border-radius: 20px;
     margin: 10px 20px 10px 20px;
